<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/sincronizacion" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefSincronizar"
            android:summary="@string/sincronizar_detalle"
            android:title="@string/sincronizar" />
        <ListPreference
            android:defaultValue="@string/tipo_conexion_default"
            android:dependency="prefSincronizar"
            android:dialogTitle="@string/tipo_conexion"
            android:entries="@array/tipo_conexion_entries"
            android:entryValues="@array/tipo_conexion_values"
            android:key="prefTipoConexion"
            android:title="@string/tipo_conexion" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/apariencia" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefLetrasGrandes"
            android:summary="@string/letras_grandes_detalle"
            android:title="@string/letras_grandes" />
        <com.h6ah4i.android.compat.preference.MultiSelectListPreferenceCompat 
            android:key="prefTurnos"
            android:title="@string/turnos"         
            android:dialogTitle="@string/turnos"   
            android:summary="@string/turnos_detalle"  
            android:entries="@array/turnos_entries"
            android:entryValues="@array/turnos_values"
            android:defaultValue="@array/turnos_default" />    
        <Preference android:title="@string/web_oficial" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.iessaladillo.es" />
        </Preference>
        <PreferenceScreen
            android:title="@string/otras" >
            <EditTextPreference
                android:dialogTitle="@string/lema"
                android:key="prefLema"
                android:summary="@string/lema_detalle"
                android:title="@string/lema" />
            <es.iessaladillo.pedrojoya.pr065.DatePickerPreference
                android:key="prefFecha"
                android:title="@string/fecha_nacimiento" />
            <RingtonePreference
                android:defaultValue="content://settings/system/notification_sound"
                android:key="prefTonoNotificacion"
                android:ringtoneType="notification"
                android:showDefault="true"
                android:showSilent="true"
                android:title="@string/tono_notificacion" />
            <com.michaelnovakjr.numberpicker.NumberPickerPreference
                xmlns:picker="http://schemas.android.com/apk/res/es.iessaladillo.pedrojoya.pr065"
                android:key="prefMaximo"
                android:summary="@string/maximo_detalle"
                android:title="@string/maximo"
                picker:defaultValue="5"
                picker:endRange="10"
                picker:startRange="1" />
            <es.iessaladillo.pedrojoya.pr065.SeekBarPreference
                xmlns:robobunny="http://robobunny.com"
                android:defaultValue="3"
                android:key="prefVelocidad"
                android:max="5"
                android:summary="@string/velocidad_detalle"
                android:title="@string/velocidad"
                robobunny:min="1"
                robobunny:unitsLeft=""
                robobunny:unitsRight="" />
            <org.jraf.android.backport.switchwidget.SwitchPreference
                xmlns:switchpref="http://schemas.android.com/apk/res-auto"
                android:key="prefRed"
                android:title="@string/red"
                switchpref:summaryOff="@string/red_detalle_off"
                switchpref:summaryOn="@string/red_detalle_on"
                switchpref:switchTextOff="@string/no"
                switchpref:switchTextOn="@string/si" />
            <net.margaritov.preference.colorpicker.ColorPickerPreference
                alphaSlider="true"
                android:defaultValue="@color/azul"
                android:key="prefFondo"
                android:summary="@string/fondo_detalle"
                android:title="@string/fondo" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>